apps/kubefiles/deployment-resources-limits-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: memconsume-2
  name: memconsume-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memconsume-2
  template:
    metadata:
      labels:
        app: memconsume-2
    spec:
      containers:
      - name: memconsume
        image: quay.io/rhdevelopers/mem-consumer:1.0.0-SNAPSHOT
        ports:
          - containerPort: 8080
        resources:
          requests: 
            memory: "300Mi" 
            cpu: "250m" # 1/4 core
          # NOTE: These are the same limits we tested our Docker Container with earlier
          # -m matches limits.memory and --cpus matches limits.cpu
          limits:
            memory: "400Mi"
            cpu: "1000m" # 1 core
