apps/kubefiles/exceeding-limits-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-next
  name: quarkus-next-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-next
  template:
    metadata:
      labels:
        app: quarkus-next
    spec:
      containers:
      - name: quarkus
        image: quay.io/rhdevelopers/knative-tutorial-greeter:quarkus
        ports:
          - containerPort: 8080
        resources:
          requests: 
            memory: "300Mi" 
            cpu: "250m" # 1/4 core
          limits:
            memory: "5000Mi" # more memory than in the node
            cpu: "1000m" # 1 core
