apps/kubefiles/not-enough-resources-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-next-5
  name: quarkus-next-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-next-5
  template:
    metadata:
      labels:
        app: quarkus-next-5
    spec:
      containers:
      - name: quarkus
        image: quay.io/rhdevelopers/knative-tutorial-greeter:quarkus
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "25Gi" # more memory than any single node has free
            cpu: "250m" # 1/4 core
          limits:
            memory: "28Gi"
            cpu: "1000m" # 1 core
